--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet"/>
+    <link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet" /> 
+    <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="main"></div>
