things are betterish

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet"/>
-    <link href="/bootstrap/dist/css/bootstrap.css" rel="stylesheet" /> 
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet" /> 
     <link href="/style.css" rel="stylesheet" />
   </head>
   <body>
